    This is a better default, because with it a triggered makefile rule
    invoking a Vala compilation will clearly fail with an informative error
    message like "valac: command not found", rather than silently, with
    the error possibly going unnoticed or triggering harder-to-diagnose
    fallout failures in later steps.

Bugs fixed in 1.12.5:

* Long-standing bugs:

  - Automake no longer generates spurious remake rules invoking autoheader
    to regenerate the template corresponding to header files specified after
    the first one in AC_CONFIG_HEADERS (automake bug#12495).

  - When wrapping Microsoft tools, the 'compile' script falls back to
    finding classic 'libname.a' style libraries when 'name.lib' and
    'name.dll.lib' aren't available.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.12.4:

* Warnings and deprecations:

  - Warnings in the 'obsolete' category are enabled by default both in
    automake and aclocal.

* Miscellaneous changes:

  - Some testsuite weaknesses and spurious failures have been fixed.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.12.3:

* Miscellaneous changes:

  - The '.m4' files provided by Automake no longer define serial numbers.
    This should cause no difference in the behaviour of aclocal though.

  - Some testsuite weaknesses and spurious failures have been fixed.

  - There is initial support for automatic dependency tracking with the
    Portland Group C/C++ compilers, thanks to the new new depmode 'pgcc'.

Bugs fixed in 1.12.3:

* Long-standing bugs:

  - Instead of renaming only self-references of files (typically for
    #lines), ylwrap now also renames references to the other generated
    files.  This fixes support for GLR and C++ parsers from Bison (PR
    automake/491 and automake bug#7648): 'parser.c' now properly
    #includes 'parser.h' instead of 'y.tab.h'.
