@@ -19,11 +19,9 @@
 BEGIN
 {
   use strict;
-  my $libdir;
-  $libdir = '@abs_top_srcdir@/lib';
-  $libdir = '@abs_top_builddir@/lib' . '@PATH_SEPARATOR@' . $libdir
+  @Aclocal::perl_libdirs = ('@abs_top_srcdir@/lib');
+  unshift @Aclocal::perl_libdirs, '@abs_top_builddir@/lib'
     if '@srcdir@' ne '.';
-  $ENV{perllibdir} = $libdir;
   unshift @ARGV,
     '--automake-acdir=@abs_top_srcdir@/m4',
     '--system-acdir=@abs_top_srcdir@/m4/acdir';
