@@ -19,11 +19,9 @@
 BEGIN
 {
   use strict;
-  my $libdir;
-  $libdir = '@abs_top_srcdir@/lib';
-  $libdir = '@abs_top_builddir@/lib' . '@PATH_SEPARATOR@' . $libdir
+  @Automake::perl_libdirs = ('@abs_top_srcdir@/lib');
+  unshift @Automake::perl_libdirs, '@abs_top_builddir@/lib'
     if '@srcdir@' ne '.';
-  $ENV{perllibdir} = $libdir;
   unshift @ARGV, '--libdir=@abs_top_srcdir@/lib';
 }
 require '@abs_top_builddir@/automake';
