@@ -85,6 +85,12 @@ New in 1.12.5:
     the error possibly going unnoticed or triggering harder-to-diagnose
     fallout failures in later steps.
 
+* Miscellaneous changes:
+
+  - automake and aclocal no longer honours the 'perllibdir' environment
+    variable.  That had always been intended only as an hack required in
+    the testsuite, not meant for any use beyond that.
+
 Bugs fixed in 1.12.5:
 
 * Long-standing bugs:
